# ProjectCode

./: CMakeLists.txt  fileCopy.py  fourthpage.cpp  fourthpage.h  fourthpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  textEdit.py  thirdwindow.cpp  thirdwindow.h  thirdwindow.ui  widget.cpp  widget.h  widget.ui
firstPage/: widget.cpp  widget.h  widget.ui
fourthPage/: fourthpage.cpp  fourthpage.h  fourthpage.ui
pyhtonScripts/: fileCopy.py  textEdit.py
secondPage/: mainwindow.cpp  mainwindow.h  mainwindow.ui
thirdPage/: thirdwindow.cpp  thirdwindow.h  thirdwindow.ui
